
Changes

  * xdrlib has been ported to cython. (Issue #441)

Fixes
  * ContactAnalysis1 run method now starts at frame index 0 by deafult (Issue #624)
  * Fixed PrimitivePDBWriter getting atom type column shifted to the right
    (Issue #639)
  * The 'atom' selection keyword returns an empty selection rather than an
    error when no atoms are are found. (Issue #644)


01/16/16 tyler.je.reddy, kain88-de, richardjgowers, manuel.nuno.melo,
         orbeckst, Balasubra

  * 0.13.0

API Changes

  * ChainReader `delta` keyword deprecated in favor of `dt`. (Issue #522)
  * XYZWriter can now be used as a container format for different protein models
    as well as a normal trajectory. If `n_atoms` is None (default) MDAnalysis
    assumes that it is used as a container and won't give a warning if the
    number of atoms differs between frames.
  * GROWriter.fmt strings updated to use format style (Issue #494)
  * removed MDAnalysis.lib.parallel.distances; use the new backend="OpenMP"
    keyword for the functions in MDAnalysis.lib.distances (Issue #530)

Enhancement

  * ChainReader now reports times properly summed over sub-readers (Issue #522)
  * GRO file reading approximately 50% faster for large files (Issue #212)
  * GRO file writing now will write velocities where possible (Issue #494)
  * Added bonded selection (Issue #362)
  * Spherical layer and spherical zone selections now much faster (Issue #362)
  * new keyword "backend" for accelerated functions in MDAnalysis.lib.distances
    to select "serial" or "OpenMP"-enabled versions of the code; the default
    is "serial" so old code will behave as before (see Issue #530)
  * Lammps data file parsing improved greatly.  Should now support all files,
    and triclinic geometry. (Issue #139)
  * Added analysis.polymer, currently with PersistenceLength tool (Issue #460)
  * Added analysis.rdf, with InterRDF tool. (Issue #460)
  * Made Reader.check_slice_indices a public method (Issue #604)