@@ -1,0 +1,37 @@
+MODEL
+CRYST1 80.000   80.000   80.000  60.00  60.00  90.00
+ATOM      1 CA   ADE     1      00.000  00.000  00.000  1.00 84.71
+ATOM      2 CA   URA     2      01.000  01.000  01.000  1.00 68.59
+ATOM      3 CA   CYT     3      02.000  02.000  02.000  1.00 48.30
+ATOM      4 CA   GUA     4      03.000  03.000  03.000  1.00 49.38
+ATOM      5 CA   THY     5      04.000  04.000  04.000  1.00 42.10
+ATOM      6 CA   DA      6      04.000  04.000  04.000  1.00 42.10
+ATOM      7 CA   DC      7      04.000  04.000  04.000  1.00 42.10
+ATOM      8 CA   DG      8      04.000  04.000  04.000  1.00 42.10
+ATOM      9 CA   DT      9      04.000  04.000  04.000  1.00 42.10
+ATOM     10 CA   RA      10     04.000  04.000  04.000  1.00 42.10
+ATOM     11 CA   RU      11     04.000  04.000  04.000  1.00 42.10
+ATOM     12 CA   RG      12     04.000  04.000  04.000  1.00 42.10
+ATOM     13 CA   RC      13     04.000  04.000  04.000  1.00 42.10
+ATOM     14 CA   A       14     04.000  04.000  04.000  1.00 42.10
+ATOM     15 CA   T       15     04.000  04.000  04.000  1.00 42.10
+ATOM     16 CA   U       16     04.000  04.000  04.000  1.00 42.10
+ATOM     17 CA   C       17     04.000  04.000  04.000  1.00 42.10
+ATOM     18 CA   G       18     04.000  04.000  04.000  1.00 42.10
+ATOM     19 CA   DA5     19     04.000  04.000  04.000  1.00 42.10
+ATOM     20 CA   DC5     20     04.000  04.000  04.000  1.00 42.10
+ATOM     21 CA   DG5     21     04.000  04.000  04.000  1.00 42.10
+ATOM     22 CA   DT5     22     04.000  04.000  04.000  1.00 42.10
+ATOM     23 CA   DA3     23     04.000  04.000  04.000  1.00 42.10
+ATOM     24 CA   DC3     24     04.000  04.000  04.000  1.00 42.10
+ATOM     25 CA   DG3     25     04.000  04.000  04.000  1.00 42.10
+ATOM     26 CA   DT3     26     04.000  04.000  04.000  1.00 42.10
+ATOM     27 CA   RA5     27     04.000  04.000  04.000  1.00 42.10
+ATOM     28 CA   RU5     28     04.000  04.000  04.000  1.00 42.10
+ATOM     29 CA   RG5     29     04.000  04.000  04.000  1.00 42.10
+ATOM     30 CA   RC5     30     04.000  04.000  04.000  1.00 42.10
+ATOM     31 CA   RA3     31     04.000  04.000  04.000  1.00 42.10
+ATOM     32 CA   RU3     32     04.000  04.000  04.000  1.00 42.10
+ATOM     33 CA   RG3     33     04.000  04.000  04.000  1.00 42.10
+ATOM     34 CA   RC3     34     04.000  04.000  04.000  1.00 42.10
+END
